--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>日プ新世界 ピラミッドメーカー</title>
+  <title>Produce101 11人ピラミッドメーカー</title>
   <style>
     :root{
       --bg:#0b0f1a;
@@ -17,7 +17,7 @@
 
       --gap:4px;
 
-      /* JSで最終決定（はみ出し対策） */
+      /* JSで内幅から決定（はみ出し防止） */
       --slotSize: 70px;
       --slotMax: 92px;
 
@@ -41,29 +41,17 @@
     .top{display:flex; align-items:center; justify-content:space-between; gap:12px}
     h1{margin:0;font-size:18px;font-weight:700;letter-spacing:.2px}
 
-    .controls{
-      display:flex; gap:10px; align-items:center; flex-wrap:wrap; justify-content:flex-end;
-    }
-    select, button{
+    button{
       height:36px;
       border-radius:10px;
       border:1px solid var(--line);
-      background: rgba(18,26,43,.95);
+      background: rgba(255,255,255,.06);
       color:var(--text);
       padding:0 12px;
-      outline:none;
-    }
-    button{
       cursor:pointer;
-      background: linear-gradient(180deg, rgba(40,120,255,.9), rgba(30,90,210,.9));
-      border:1px solid rgba(255,255,255,.14);
-      box-shadow: 0 8px 18px rgba(30,90,210,.25);
-    }
-    button:active{transform: translateY(1px)}
-    .btnGhost{
-      background: rgba(255,255,255,.06);
       box-shadow:none;
     }
+    button:active{transform: translateY(1px)}
 
     main{max-width:1100px;margin:0 auto;padding:10px 16px 60px}
 
@@ -94,13 +82,6 @@
       font-size: 12px;
     }
     .bar strong{color:var(--text); font-weight:900}
-
-    /* ★全解除を枠外に */
-    .topActions{
-      display:flex;
-      justify-content:flex-end;
-      gap:10px;
-    }
 
     /* pyramid */
     .rows{display:flex; flex-direction:column; gap:6px}
@@ -138,7 +119,7 @@
     }
     .slot.active{
       outline: 2px solid rgba(110,190,255,.85);
-      outline-offset: 0px; /* ★はみ出し原因になりやすいので0 */
+      outline-offset: 0px;
     }
     .slot.empty{
       background: rgba(255,255,255,.04);
@@ -214,6 +195,7 @@
       max-height: 120px;
       overflow:auto;
       padding-right:4px;
+      margin-bottom: 10px;
     }
     .chip{
       display:inline-flex;
@@ -229,6 +211,22 @@
       white-space:nowrap;
     }
     .chip input{ accent-color: #7fb6ff; }
+
+    .sortBox{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+    select{
+      height:36px;
+      border-radius:10px;
+      border:1px solid var(--line);
+      background: rgba(18,26,43,.95);
+      color:var(--text);
+      padding:0 12px;
+      outline:none;
+    }
 
     /* grid */
     .gridSection{margin-top: 12px}
@@ -297,22 +295,15 @@
 <header>
   <div class="wrap">
     <div class="top">
-      <h1>日プ新世界 ピラミッドメーカー</h1>
-      <div class="controls">
-        <select id="sort"></select>
-        <button id="reload" type="button">データ再読込</button>
-      </div>
+      <!-- ★タイトルだけ -->
+      <h1>Produce101 11人ピラミッドメーカー</h1>
+      <div></div>
     </div>
   </div>
 </header>
 
 <main>
   <section class="stickyWrap">
-    <!-- ★全解除はピラミッド枠の外 -->
-    <div class="topActions">
-      <button class="btnGhost" id="clear" type="button">全解除</button>
-    </div>
-
     <div class="panel" id="pyramidPanel">
       <div class="bar">
         <div id="count"></div>
@@ -330,9 +321,23 @@
     </div>
   </section>
 
+  <!-- ★全解除はベンチの下（流れてOK） -->
+  <div style="margin-top:10px; display:flex; justify-content:flex-end;">
+    <button id="clear" type="button">全解除</button>
+  </div>
+
   <section class="optionsPanel">
-    <p class="optionsTitle">表示する項目（3つまで）</p>
+    <p class="optionsTitle">表示する項目（CSVの列から自動生成）</p>
     <div class="toggles" id="toggles"></div>
+
+    <!-- ★並び替えはここ（スクロールで流れてOK） -->
+    <div class="sortBox">
+      <select id="sortKey"></select>
+      <select id="sortDir">
+        <option value="asc">昇順</option>
+        <option value="desc">降順</option>
+      </select>
+    </div>
   </section>
 
   <section class="gridSection">
@@ -344,7 +349,6 @@
   const CSV_PATH = "data/master.csv";
 
   const gridEl = document.getElementById("grid");
-  const sortEl = document.getElementById("sort");
   const countEl = document.getElementById("count");
   const pyramidEl = document.getElementById("pyramid");
   const benchEl = document.getElementById("bench");
@@ -352,10 +356,12 @@
   const togglesEl = document.getElementById("toggles");
   const pyramidPanelEl = document.getElementById("pyramidPanel");
 
+  const sortKeyEl = document.getElementById("sortKey");
+  const sortDirEl = document.getElementById("sortDir");
+
   const ROWS = [1,2,3,5];
   const TOTAL = ROWS.reduce((a,b)=>a+b,0);
 
-  // 表示トグル候補から除外（id/img系）
   const EXCLUDE_KEYS = new Set([
     "id","ID","Id",
     "img","image","Image","画像","photo","Photo",
@@ -371,8 +377,8 @@
     activeSlotIndex: null,
     displayKeys: [],
     show: {},
-    sortKeys: [], // CSV列名
-    lastTappedId: null   // ← 追加
+    sortKeys: [],
+    lastTappedId: null, // 2回タップ削除用
   };
 
   function escapeHtml(s){
@@ -475,14 +481,13 @@
     if (occupant) state.bench.unshift(occupant);
   }
 
-  // ===== はみ出し対策：パネルの内幅からslotSizeをJSで決定 =====
+  // はみ出し防止：パネルの内幅からslotSizeを確定
   function updateSlotSize(){
     if (!pyramidPanelEl) return;
 
     const st = getComputedStyle(pyramidPanelEl);
     const padL = parseFloat(st.paddingLeft) || 0;
     const padR = parseFloat(st.paddingRight) || 0;
-
     const inner = Math.max(0, pyramidPanelEl.clientWidth - padL - padR);
 
     const root = getComputedStyle(document.documentElement);
@@ -493,7 +498,6 @@
     document.documentElement.style.setProperty("--slotSize", size + "px");
   }
 
-  // ===== 表示トグル（CSV列名から） =====
   function buildDisplayKeysFromHeader(header){
     return header.filter(h => h && !EXCLUDE_KEYS.has(h));
   }
@@ -517,7 +521,7 @@
     state.show[key] = cb.checked;
     renderPyramid();
     renderBench();
-    renderGrid(); // ★121人の表示も、ここで即反映
+    renderGrid();
   });
 
   function buildInfoLines(person){
@@ -533,31 +537,25 @@
     return lines;
   }
 
-  // ===== sort：CSVの列名から自動生成 =====
+  // 並び替え：CSV列のみ（登録順なし）＋昇順/降順
   function buildSortKeys(header){
-    // 画像列は並び替え対象にしない（必要なら外してOK）
     const excludeForSort = new Set(["img","image","Image","画像","photo","Photo"]);
     return header.filter(h => h && !excludeForSort.has(h));
   }
 
   function renderSortSelect(){
-    // 先頭に登録順（内部）も残す
-    const opts = [
-      { value: "__idx", label: "登録順" },
-      ...state.sortKeys.map(k => ({ value: k, label: k })),
-    ];
-
-    sortEl.innerHTML = opts.map(o =>
-      `<option value="${escapeHtml(o.value)}">${escapeHtml(o.label)}</option>`
+    sortKeyEl.innerHTML = state.sortKeys.map(k =>
+      `<option value="${escapeHtml(k)}">${escapeHtml(k)}</option>`
     ).join("");
 
-    // 何も指定なければ登録順
-    sortEl.value = "__idx";
+    // デフォで Name があればそれ、なければ先頭
+    if (state.sortKeys.includes("Name")) sortKeyEl.value = "Name";
+    else if (state.sortKeys.includes("名前")) sortKeyEl.value = "名前";
+    else sortKeyEl.value = state.sortKeys[0] || "";
   }
 
   function toSortableValue(v){
     const s = String(v ?? "").trim();
-    // 数字っぽいのは数値で
     const n = Number(s);
     if (s !== "" && Number.isFinite(n)) return { type:"num", v:n };
     return { type:"str", v:s };
@@ -565,21 +563,18 @@
 
   function getSortedPeople(){
     const arr = [...state.people];
-    const key = sortEl.value;
-
-    if (key === "__idx"){
-      arr.sort((a,b) => a.__idx - b.__idx);
-      return arr;
-    }
+    const key = sortKeyEl.value;
+    const dir = sortDirEl.value;
 
     arr.sort((a,b) => {
       const av = toSortableValue(a.raw[key]);
       const bv = toSortableValue(b.raw[key]);
 
-      if (av.type === "num" && bv.type === "num") return av.v - bv.v;
+      let cmp = 0;
+      if (av.type === "num" && bv.type === "num") cmp = av.v - bv.v;
+      else cmp = String(av.v).localeCompare(String(bv.v), "ja", { numeric:true, sensitivity:"base" });
 
-      // 日本語含む文字列ソート
-      return String(av.v).localeCompare(String(bv.v), "ja", { numeric:true, sensitivity:"base" });
+      return dir === "desc" ? -cmp : cmp;
     });
 
     return arr;
@@ -652,18 +647,14 @@
     setBar();
   }
 
-  // ★121人のカード表示も「表示する項目」に揃える
+  // 121人カードも「表示する項目」に揃える
   function getCardTitleAndSub(person){
     const lines = buildInfoLines(person);
-
-    // 何もONがない時の保険（Nameだけ出す）
     const fallbackNameKey = state.header.includes("Name") ? "Name"
       : state.header.includes("名前") ? "名前"
       : null;
-
     const title = lines[0] || (fallbackNameKey ? (person.raw[fallbackNameKey] || "") : "");
     const sub = lines.slice(1,3).join(" / ");
-
     return { title, sub };
   }
 
@@ -699,67 +690,60 @@
     setBar();
   }
 
-  // 操作
+  // ピラミッド枠：2回タップで削除 / 別枠タップで入れ替え準備
   function onSlotClick(slotIndex){
-  const id = state.slots[slotIndex];
+    const id = state.slots[slotIndex];
 
-  // 同じ枠を2回押したら削除
-  if (state.activeSlotIndex === slotIndex){
-    if (id){
-      state.slots[slotIndex] = null;
+    if (state.activeSlotIndex === slotIndex){
+      if (id) state.slots[slotIndex] = null;
+      state.activeSlotIndex = null;
+      renderPyramid(); renderBench(); renderGrid();
+      return;
     }
-    state.activeSlotIndex = null;
-    renderPyramid();
-    renderBench();
-    renderGrid();
-    return;
+
+    if (state.activeSlotIndex != null && state.activeSlotIndex !== slotIndex){
+      swapSlots(state.activeSlotIndex, slotIndex);
+      state.activeSlotIndex = null;
+      renderPyramid(); renderBench(); renderGrid();
+      return;
+    }
+
+    state.activeSlotIndex = slotIndex;
+    renderPyramid(); renderBench(); renderGrid();
   }
 
-  state.activeSlotIndex = slotIndex;
-  renderPyramid();
-  renderBench();
-  renderGrid();
-}
+  // ★削除は「同じidの2回連続タップ」のみ
+  function onPickId(id){
+    // 2回連続タップなら削除
+    if (state.lastTappedId === id && isSelected(id)){
+      removeIdEverywhere(id);
+      state.lastTappedId = null;
+      renderPyramid(); renderBench(); renderGrid();
+      return;
+    }
 
-function onPickId(id){
+    // スロット選択中なら差し替え
+    if (state.activeSlotIndex != null){
+      placeIdIntoSlot(id, state.activeSlotIndex);
+      state.activeSlotIndex = null;
+      state.lastTappedId = null;
+      renderPyramid(); renderBench(); renderGrid();
+      return;
+    }
 
-  // 2回連続タップなら削除
-  if (state.lastTappedId === id && isSelected(id)){
-    removeIdEverywhere(id);
-    state.lastTappedId = null;
-    renderPyramid();
-    renderBench();
-    renderGrid();
-    return;
+    // 1回目タップは記録
+    state.lastTappedId = id;
+
+    // 未選択なら追加
+    if (!isSelected(id)){
+      const empty = firstEmptySlot();
+      if (empty >= 0) state.slots[empty] = id;
+      else state.bench.unshift(id);
+      state.lastTappedId = null;
+    }
+
+    renderPyramid(); renderBench(); renderGrid();
   }
-
-  // スロット選択中なら差し替え
-  if (state.activeSlotIndex != null){
-    placeIdIntoSlot(id, state.activeSlotIndex);
-    state.activeSlotIndex = null;
-    state.lastTappedId = null;
-    renderPyramid();
-    renderBench();
-    renderGrid();
-    return;
-  }
-
-  // 1回目タップは選択記録だけ
-  state.lastTappedId = id;
-
-  // まだ未選択なら追加
-  if (!isSelected(id)){
-    const empty = firstEmptySlot();
-    if (empty >= 0) state.slots[empty] = id;
-    else state.bench.unshift(id);
-
-    state.lastTappedId = null; // 追加後はリセット
-  }
-
-  renderPyramid();
-  renderBench();
-  renderGrid();
-}
 
   async function loadData(){
     const res = await fetch(CSV_PATH, { cache: "no-store" });
@@ -768,7 +752,6 @@ function onPickId(id){
 
     state.header = header;
 
-    // 表示トグル
     state.displayKeys = buildDisplayKeysFromHeader(header);
     for (const k of state.displayKeys){
       if (!(k in state.show)) state.show[k] = false;
@@ -777,7 +760,6 @@ function onPickId(id){
       if (!state.displayKeys.includes(k)) delete state.show[k];
     }
 
-    // sort
     state.sortKeys = buildSortKeys(header);
 
     state.people = normalizePeople(rows);
@@ -786,11 +768,12 @@ function onPickId(id){
     state.slots = state.slots.map(id => (id && state.byId.has(id)) ? id : null);
     state.bench = state.bench.filter(id => state.byId.has(id));
     state.activeSlotIndex = null;
+    state.lastTappedId = null;
 
-    renderSortSelect();
     renderToggles();
+    renderSortSelect();
 
-    updateSlotSize();  // ★ロード直後にまず確定
+    updateSlotSize();
     renderPyramid(); renderBench(); renderGrid();
   }
 
@@ -800,24 +783,10 @@ function onPickId(id){
     if (!slot) return;
     onSlotClick(Number(slot.dataset.slot));
   });
-  pyramidEl.addEventListener("keydown", (e) => {
-    if (e.key !== "Enter" && e.key !== " ") return;
-    const slot = e.target.closest(".slot");
-    if (!slot) return;
-    e.preventDefault();
-    onSlotClick(Number(slot.dataset.slot));
-  });
 
   benchEl.addEventListener("click", (e) => {
     const item = e.target.closest(".benchItem");
     if (!item) return;
-    onPickId(item.dataset.id);
-  });
-  benchEl.addEventListener("keydown", (e) => {
-    if (e.key !== "Enter" && e.key !== " ") return;
-    const item = e.target.closest(".benchItem");
-    if (!item) return;
-    e.preventDefault();
     onPickId(item.dataset.id);
   });
 
@@ -826,31 +795,23 @@ function onPickId(id){
     if (!card) return;
     onPickId(card.dataset.id);
   });
-  gridEl.addEventListener("keydown", (e) => {
-    if (e.key !== "Enter" && e.key !== " ") return;
-    const card = e.target.closest(".card");
-    if (!card) return;
-    e.preventDefault();
-    onPickId(card.dataset.id);
-  });
 
-  sortEl.addEventListener("change", renderGrid);
-  document.getElementById("reload").addEventListener("click", loadData);
+  sortKeyEl.addEventListener("change", renderGrid);
+  sortDirEl.addEventListener("change", renderGrid);
 
   document.getElementById("clear").addEventListener("click", () => {
     state.slots = Array(TOTAL).fill(null);
     state.bench = [];
     state.activeSlotIndex = null;
+    state.lastTappedId = null;
     renderPyramid(); renderBench(); renderGrid();
   });
 
-  // ★幅変化でslotSizeを再計算（はみ出し完全防止）
   window.addEventListener("resize", () => {
     updateSlotSize();
-    renderPyramid(); // テキスト量によって見え方変わるので再描画
+    renderPyramid();
   });
 
-  // init
   loadData();
 </script>
 </body>
