--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
 
   const CLASS_COLOR = {
     "A":"#ff69b4",
-    "B":"#ff8c00",
-    "C":"#00ff7f",
-    "D":"#000000",
+    "B":"#ffa500",
+    "C":"#7fffd4",
+    "D":"#2b2b2b",
     "F":"#a9a9a9"
   };
 
