--- a/index.html
+++ b/index.html
@@ -450,10 +450,10 @@
 
   const CLASS_COLOR = {
     "A":"#ff69b4",
-    "B":"#ff8c00",
-    "C":"#00ff7f",
-    "D":"#000000",
-    "F":"#a9a9a9"
+    "B":"#ffa500",
+    "C":"#7fffd4",
+    "D":"#080000",
+    "F":"#d3d3d3"
   };
 
   const state = {
